casa/Quanta/test/tQuantumHolder.out
Test QuantumHolder  
----------------------------------------------------
Input quantity:              12.5 km/s
Record output quantity:      12.5 km/s
Is quantum:                  1
Is quantity:                 1
Is empty:                    0
Is scalar:                   1
Is array:                    0
Is real:                     1
Is complex:                  0
Is double:                   1
Is float:                    0
Is int32_t:                      0
Is Complex:                  0
Is DComplex:                 0
Is Vector double:            0
Is Vector float:             0
Is Vector int32_t:               0
Is Vector Complex:           0
Is Vector DComplex:          0
As quantity:                 12.5 km/s
As double:                   12.5 km/s
As Vector double:            [12.5] km/s
As float:                    12.5 km/s
As Vector float:             [12.5] km/s
As int32_t:                      12 km/s
As Vector int32_t:               [12] km/s
As Complex:                  (12.5,0) km/s
As Vector Complex:           [(12.5,0)] km/s
As DComplex:                 (12.5,0) km/s
As Vector DComplex:          [(12.5,0)] km/s
Input quantity:              30.3 Jy/a
Record output quantity:      30.3 Jy/a
Input quantity:              2 pc3/d
Record output quantity:      2 pc3/d
Error expected:
Input quantity:              12.5 km/s
From error: Illegal Quantum record in QuantumHolder::fromRecord

Input String:                12:30:00
As quantity:                 187.5 deg
Input String:                -97.8 Mpc/a
As quantity:                 -97.8 Mpc/a
Input String:                12.5JY
Expected error for String 12.5JY (value still -97.8 Mpc/a)
Error message now: Illegal Quantum record in QuantumHolder::fromRecord
in QuantumHolder::fromString with input string "12.5JY": Illegal input units or format

----------------------------------------------------
